css: trick to avoid the infobox overlapsing the footer
happened with small files, or small folders

--- a/python/app/static/css/base.css
+++ b/python/app/static/css/base.css
@@ -128,3 +128,10 @@ table.rrd tr td {
     margin-top: 0px;
     margin-bottom: 0px;
 }
+
+/* trick to be sure the infobox doesn't overlapse the footer */
+#infobox_align {
+    height: 300px;
+    width: 0px;
+    float: right;
+}
